@@ -1,4 +1,6 @@
 DFHack Future
+    New scripts:
+        - adaptation: view or set the cavern adaptation level of your citizens
 
 DFHack 0.40.15-r1
     Fixes:
